[GPU Process] Some DisplayList items may not be replayed back before calling getImageData() https://bugs.webkit.org/show_bug.cgi?id=222343

Reviewed by Tim Horton.

Source/WebKit:

Make sure all the pending DisplayList items are pushed to the GPUP and
submitted to RemoteImageBuffer before calling the asynchronous method
getImageData().

* WebProcess/GPU/graphics/RemoteImageBufferProxy.h:

LayoutTests:

* gpu-process/TestExpectations:


Canonical link: https://commits.webkit.org/234702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273672 268f45cc-cd09-0410-ab3c-d52691b4dbfc